--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "nibbles.bas",
-  "version": "0.1.0",
+  "version": "0.9.0",
   "description": "a simple recreation of the qbasic version of snake",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "snake",
@@ -19,5 +18,7 @@
     "gulp-jscs": "^3.0.1",
     "gulp-jshint": "^1.11.2",
     "webpack-stream": "^2.1.1"
-  }
+  },
+  "repository": "https://github.com/branespace/nibbles.bas",
+  "website": "https://branespace.github.io/nibbles.bas"
 }
